[project]
name = "aoc2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "John San Soucie", email = "j.e.sansoucie@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
